--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -69,8 +69,8 @@ jobs:
       run: ./gradlew build
       shell: bash
 
-    - name: Compile querydsl with Gradle
-      run: ./gradlew compilequerydsl
+#    - name: Compile querydsl with Gradle
+#      run: ./gradlew compilequerydsl
 
     ## docker build & push to production
     - name: Docker build & push to prod
