--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -77,8 +77,9 @@ jobs:
       if: contains(github.ref, 'master')
       run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -f Dockerfile -t ${{ secrets.DOCKER_REPO }}/seesaw-prod .
-          docker push ${{ secrets.DOCKER_REPO }}/seesaw-prod
+          docker build -f Dockerfile -t mkkim999/seesaw-prod .
+          docker image tag seesaw/seesaw-prod mkkim999/seesaw/seesaw-prod
+          docker push seesaw/seesaw-prod
 
     ## deploy to production
     - name: Deploy to prod
