Fix(#1-CI/CD): 스크립트 오류 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -84,7 +84,7 @@ jobs:
     - name: Deploy to prod
       uses: appleboy/ssh-action@master
       id: deploy-prod
-      if: contains(github.ref, 'main')
+      if: contains(github.ref, 'master')
       with:
           host: ec2-3-36-172-10.ap-northeast-2.compute.amazonaws.com
           username: ubuntu
