--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -92,7 +92,7 @@ jobs:
           envs: GITHUB_SHA
           script: |
               sudo docker rm -f $(docker ps -qa)
-              sudo docker pull ${{ secrets.DOCKER_REPO }}/seesaw-prod
+              sudo docker pull mkkim999/seesaw
               docker-compose up -d
               docker image prune -f
 
