--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,11 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
-    implementation "io.jsonwebtoken:jjwt:0.9.1"
+
+    implementation "io.jsonwebtoken:jjwt:0.9.1" // JWT
+    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
+    // FeignClient 사용을 위한 Spring Cloud
+    implementation "org.springframework.cloud:spring-cloud-starter-openfeign" //FeignClient
 }
 
 tasks.named('test') {
