--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
     implementation "io.jsonwebtoken:jjwt:0.9.1" // JWT
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
     // FeignClient 사용을 위한 Spring Cloud
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign" //FeignClient
