--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,14 +34,21 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle-
 
-#     ## create application-dev.properties
-#     - name: make application-dev.properties
-#       if: contains(github.ref, 'develop')
-#       run: |
-#         cd ./src/main/resources
-#         touch ./application-dev.properties
-#         echo "${{ secrets.PROPERTIES_DEV }}" > ./application-dev.properties
-#       shell: bash
+     ## create application-secret.yml
+    - name: make application-secret.yml
+      run: |
+         cd ./src/main/resources
+         touch ./application-secret.yml
+         echo "${{ secrets.SECRET_YML }}" > ./application-secret.yml
+      shell: bash
+      
+      ## create application-secret.yml
+    - name: make application-prod.yml
+      run: |
+         cd ./src/main/resources
+         touch ./application-prod.yml
+         echo "${{ secrets.PROD_YML }}" > ./application-prod.yml
+      shell: bash
 
 #     ## create application-prod.properties
 #     - name: make application-prod.properties
