Fix(#4-login): .gitignore 수정 및 application.yml 수정

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ out/
 
 ### Security Files ###
 src/main/resources/application-secret.yml
+src/main/resources/application-prod.yml
+
+### Log Files ###
+*.log
