--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -14,6 +14,9 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
         default_batch_fetch_size: 1000
+  redis:
+    host: localhost
+    port: 6379
 
   config:
     activate:
