--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
-    implementation "io.jsonwebtoken:jjwt:0.9.1" // JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5' // JWT
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
     // FeignClient 사용을 위한 Spring Cloud
