--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -88,7 +88,7 @@ jobs:
       if: contains(github.ref, 'master')
       with:
           host: ec2-3-36-172-10.ap-northeast-2.compute.amazonaws.com
-          username: ubuntu
+          username: ec2-user
           key: ${{ secrets.PRIVATE_KEY }}
           envs: GITHUB_SHA
           script: |
