--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,16 @@
+// Querydsl 추가
+buildscript {
+    ext {
+        queryDslVersion = "5.0.0"
+    }
+}
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '2.7.10'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+
+    id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10' // Querydsl 추가
 }
 
 jar {
@@ -41,6 +50,10 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
+
+    implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+    implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+
     // FeignClient 사용을 위한 Spring Cloud
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign" //FeignClient
 }
